# django-referral-system

./: README.md  db.yml  pyproject.toml
src/config/: settings.py  urls.py
src/referral_system/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/referral_system/migrations/: 0001_initial.py  0002_initial.py
src/user/: manager.py  models.py
src/user/migrations/: 0001_initial.py
